Rest Client Reactive: SmallRye Stork integration